create random order images

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <button id="startbtn">start</button>
-    <ul id="cardbox">
+    <ul id="cardul">
 
         <li class="card">
             <img src="assets/spaghitte.png"
