food card flipped

--- a/index.html
+++ b/index.html
@@ -16,54 +16,170 @@
 
 <body>
     <button id="startbtn">start</button>
-    <ul id="cardul">
+    <div id='text'> result </div>
+    <div id="point">0</div>
 
+    <section class="container">
+        <div class="card">
+            <div class="front"><img src="assets/card.png"
+                    alt="card"></div>
+            <div class="back"><img src="assets/green.png"
+                    class="front hidden"
+                    alt="green"
+                    data-name="green"></div>
+        </div>
+        <div class="card">
+            <div class="front">
+                <img src="assets/card.png"
+                    alt="card">
+
+            </div>
+            <div class="back"><img src="assets/spaghitte.png"
+                    class="f"
+                    data-name="spaghitte"
+                    alt="spaghitte"></div>
+        </div>
+        <div class="card">
+            <div class="front"><img src="assets/card.png"
+                    alt="card"></div>
+            <div class="back"><img src="assets/spaghitte.png"
+                    class="f"
+                    data-name="spaghitte"
+                    alt="spaghitte"></div>
+        </div>
+        <div class="card">
+            <div class="front"><img src="assets/card.png"
+                    alt="card"></div>
+            <div class="back"><img src="assets/salad.png"
+                    class="front hidden"
+                    alt="salad"
+                    data-name="salad"></div>
+        </div>
+        <div class="card">
+            <div class="front">
+                <img src="assets/card.png"
+                    alt="card">
+            </div>
+            <div class="back"><img src="assets/pizza.png"
+                    class="front hidden"
+                    alt="pizza"
+                    data-name="pizza"></div>
+        </div>
+        <div class="card">
+            <div class="front">
+                <img src="assets/card.png"
+                    alt="card">
+            </div>
+            <div class="back"> <img src="assets/hanbao.png"
+                    class="front hidden"
+                    alt="hanbao"
+                    data-name="hanbao"></div>
+        </div>
+        <div class="card">
+            <div class="front"><img src="assets/card.png"
+                    alt="card">
+            </div>
+            <div class="back"><img src="assets/beef.png"
+                    class="front hidden"
+                    alt="beef"
+                    data-name="beef"></div>
+        </div>
+        <div class="card">
+            <div class="front"><img src="assets/card.png"
+                    alt="card">
+            </div>
+            <div class="back"><img src="assets/noddle.png"
+                    class="front hidden"
+                    alt="noodle"
+                    data-name="noodle"></div>
+        </div>
+        <div class="card">
+            <div class="front"><img src="assets/card.png"
+                    alt="card"></div>
+            <div class="back"><img src="assets/rice.png"
+                    class="front hidden"
+                    alt="rice"
+                    data-name="rice"></div>
+        </div>
+        <div class="card">
+            <div class="front"><img src="assets/card.png"
+                    alt="card"></div>
+            <div class="back"> <img src="assets/hotdog.png"
+                    class="front hidden"
+                    data-name="hotdog"
+                    alt="hotdog"> </div>
+        </div>
+
+    </section>
+
+    <!-- <ul id="cardul">
         <li class="card">
+            <div class="back"></div>
+            <div class="front"></div>
+        </li> -->
+
+    <!-- <li class="card">
             <img src="assets/spaghitte.png"
-                class="front hidden"
-                alt="">
+                class="front"
+                data-name="spaghitte"
+                alt="spaghitte">
+            <img src="assets/card.png"
+                class="back"
+                data-name="cardBack"
+                alt="cardBack">
+        </li>
+
+        <li class="card"><img src="assets/card.png"
+                class="back"
+                data-name="cardBack"
+                alt="cardBack">
+
+        </li>
+        <li class="card"> 
+            <img src="assets/card.png"
+                class="back"
+                data-name="cardBack"
+                alt="cardBack">
+        </li>
+        <li class="card"> 
+            <img src="assets/card.png"
+                class="back"
+                data-name="cardBack"
+                alt="cardBack">
+        </li>
+        <li class="card"> 
+            <img src="assets/card.png"
+                class="back"
+                data-name="cardBack"
+                alt="cardBack">
         </li>
         <li class="card">
-            <img src="assets/spaghitte.png"
-                class="front hidden"
-                alt="">
+            <img src="assets/card.png"
+                class="back"
+                data-name="cardBack"
+                alt="cardBack">
         </li>
-        <li class="card"> <img src="assets/hotdog.png"
-                class="front hidden"
-                alt="">
+        <li class="card"> 
+            <img src="assets/card.png"
+                class="back"
+                data-name="cardBack"
+                alt="cardBack">
         </li>
-        <li class="card"> <img src="assets/rice.png"
-                class="front hidden"
-                alt="">
+        <li class="card"> 
+            <img src="assets/card.png"
+                class="back"
+                data-name="cardBack"
+                alt="cardBack">
         </li>
-        <li class="card"> <img src="assets/green.png"
-                class="front hidden"
-                alt="">
-        </li>
-        <li class="card"> <img src="assets/salad.png"
-                class="front hidden"
-                alt="">
-        </li>
-        <li class="card"> <img src="assets/hanbao.png"
-                class="front hidden"
-                alt="">
-        </li>
-        <li class="card"> <img src="assets/beef.png"
-                class="front hidden"
-                alt="">
-        </li>
-        <li class="card"> <img src="assets/noddle.png"
-                class="front hidden"
-                alt="">
-        </li>
-        <li class="card"> <img src="assets/pizza.png"
-                class="front hidden"
-                alt="">
-        </li>
+        <li class="card">  <img src="assets/card.png"
+                class="back"
+                data-name="cardBack"
+                alt="cardBack">
+        </li> -->
+    </ul>
 
 
-
-        <script src="app.js"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
