creat new order and add to html

--- a/index.html
+++ b/index.html
@@ -21,162 +21,117 @@
 
     <section class="container">
         <div class="card">
-            <div class="front"><img src="assets/card.png"
-                    alt="card"></div>
-            <div class="back"><img src="assets/green.png"
-                    class="front hidden"
+            <div class="front">
+                <img src="assets/card.png"
+                    alt="card">
+            </div>
+            <div class="back">
+                <img src="assets/green.png"
                     alt="green"
-                    data-name="green"></div>
+                    class="food"
+                    data-name="green">
+            </div>
         </div>
         <div class="card">
             <div class="front">
                 <img src="assets/card.png"
                     alt="card">
-
             </div>
-            <div class="back"><img src="assets/spaghitte.png"
-                    class="f"
+            <div class="back">
+                <img src="assets/spaghitte.png"
                     data-name="spaghitte"
-                    alt="spaghitte"></div>
+                    alt="spaghitte"
+                    class="food">
+            </div>
         </div>
         <div class="card">
-            <div class="front"><img src="assets/card.png"
+            <div class="front">
+                <img src="assets/card.png"
                     alt="card"></div>
-            <div class="back"><img src="assets/spaghitte.png"
-                    class="f"
+            <div class="back">
+                <img src="assets/spaghitte.png"
                     data-name="spaghitte"
-                    alt="spaghitte"></div>
+                    alt="spaghitte"
+                    class="food"></div>
         </div>
         <div class="card">
-            <div class="front"><img src="assets/card.png"
+            <div class="front">
+                <img src="assets/card.png"
                     alt="card"></div>
-            <div class="back"><img src="assets/salad.png"
-                    class="front hidden"
+            <div class="back">
+                <img src="assets/salad.png"
                     alt="salad"
-                    data-name="salad"></div>
+                    data-name="salad"
+                    class="food"></div>
         </div>
         <div class="card">
             <div class="front">
                 <img src="assets/card.png"
                     alt="card">
             </div>
-            <div class="back"><img src="assets/pizza.png"
-                    class="front hidden"
+            <div class="back">
+                <img src="assets/pizza.png"
                     alt="pizza"
-                    data-name="pizza"></div>
+                    data-name="pizza"
+                    class="food"></div>
         </div>
         <div class="card">
             <div class="front">
                 <img src="assets/card.png"
                     alt="card">
             </div>
-            <div class="back"> <img src="assets/hanbao.png"
-                    class="front hidden"
+            <div class="back">
+                <img src="assets/hanbao.png"
                     alt="hanbao"
-                    data-name="hanbao"></div>
+                    data-name="hanbao"
+                    class="food"></div>
         </div>
         <div class="card">
-            <div class="front"><img src="assets/card.png"
+            <div class="front">
+                <img src="assets/card.png"
                     alt="card">
             </div>
-            <div class="back"><img src="assets/beef.png"
-                    class="front hidden"
+            <div class="back">
+                <img src="assets/beef.png"
                     alt="beef"
-                    data-name="beef"></div>
+                    data-name="beef"
+                    class="food"></div>
         </div>
         <div class="card">
-            <div class="front"><img src="assets/card.png"
+            <div class="front">
+                <img src="assets/card.png"
                     alt="card">
             </div>
-            <div class="back"><img src="assets/noddle.png"
-                    class="front hidden"
+            <div class="back">
+                <img src="assets/noddle.png"
                     alt="noodle"
-                    data-name="noodle"></div>
+                    data-name="noodle"
+                    class="food"></div>
         </div>
         <div class="card">
-            <div class="front"><img src="assets/card.png"
+            <div class="front">
+                <img src="assets/card.png"
                     alt="card"></div>
-            <div class="back"><img src="assets/rice.png"
-                    class="front hidden"
+            <div class="back">
+                <img src="assets/rice.png"
                     alt="rice"
-                    data-name="rice"></div>
+                    data-name="rice"
+                    class="food"></div>
         </div>
         <div class="card">
-            <div class="front"><img src="assets/card.png"
-                    alt="card"></div>
-            <div class="back"> <img src="assets/hotdog.png"
-                    class="front hidden"
+            <div class="front">
+                <img src="assets/card.png"
+                    alt="card">
+            </div>
+            <div class="back">
+                <img src="assets/hotdog.png"
                     data-name="hotdog"
-                    alt="hotdog"> </div>
+                    alt="hotdog"
+                    class="food">
+            </div>
         </div>
 
     </section>
-
-    <!-- <ul id="cardul">
-        <li class="card">
-            <div class="back"></div>
-            <div class="front"></div>
-        </li> -->
-
-    <!-- <li class="card">
-            <img src="assets/spaghitte.png"
-                class="front"
-                data-name="spaghitte"
-                alt="spaghitte">
-            <img src="assets/card.png"
-                class="back"
-                data-name="cardBack"
-                alt="cardBack">
-        </li>
-
-        <li class="card"><img src="assets/card.png"
-                class="back"
-                data-name="cardBack"
-                alt="cardBack">
-
-        </li>
-        <li class="card"> 
-            <img src="assets/card.png"
-                class="back"
-                data-name="cardBack"
-                alt="cardBack">
-        </li>
-        <li class="card"> 
-            <img src="assets/card.png"
-                class="back"
-                data-name="cardBack"
-                alt="cardBack">
-        </li>
-        <li class="card"> 
-            <img src="assets/card.png"
-                class="back"
-                data-name="cardBack"
-                alt="cardBack">
-        </li>
-        <li class="card">
-            <img src="assets/card.png"
-                class="back"
-                data-name="cardBack"
-                alt="cardBack">
-        </li>
-        <li class="card"> 
-            <img src="assets/card.png"
-                class="back"
-                data-name="cardBack"
-                alt="cardBack">
-        </li>
-        <li class="card"> 
-            <img src="assets/card.png"
-                class="back"
-                data-name="cardBack"
-                alt="cardBack">
-        </li>
-        <li class="card">  <img src="assets/card.png"
-                class="back"
-                data-name="cardBack"
-                alt="cardBack">
-        </li> -->
-    </ul>
 
 
     <script src="app.js"></script>
