game works ,need to fix responsive

--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
 </head>
 
 <body>
-    <button id="startbtn">start</button>
+    <button id="startbtn">cheat</button>
     <div id='text'> result </div>
     <div id="point">0</div>
 
-    <section class="container">
-        <div class="card">
+    <section id="container">
+        <div class="card"
+            data-name="green">
             <div class="front">
                 <img src="assets/card.png"
                     alt="card">
@@ -28,43 +29,43 @@
             <div class="back">
                 <img src="assets/green.png"
                     alt="green"
-                    class="food"
-                    data-name="green">
+                    class="food">
             </div>
         </div>
-        <div class="card">
+        <div class="card"
+            data-name="spaghitte">
             <div class="front">
                 <img src="assets/card.png"
                     alt="card">
             </div>
             <div class="back">
                 <img src="assets/spaghitte.png"
-                    data-name="spaghitte"
                     alt="spaghitte"
                     class="food">
             </div>
         </div>
-        <div class="card">
+        <div class="card"
+            data-name="spaghitte">
             <div class="front">
                 <img src="assets/card.png"
                     alt="card"></div>
             <div class="back">
                 <img src="assets/spaghitte.png"
-                    data-name="spaghitte"
                     alt="spaghitte"
                     class="food"></div>
         </div>
-        <div class="card">
+        <div class="card"
+            data-name="salad">
             <div class="front">
                 <img src="assets/card.png"
                     alt="card"></div>
             <div class="back">
                 <img src="assets/salad.png"
                     alt="salad"
-                    data-name="salad"
                     class="food"></div>
         </div>
-        <div class="card">
+        <div class="card"
+            data-name="pizza">
             <div class="front">
                 <img src="assets/card.png"
                     alt="card">
@@ -72,10 +73,10 @@
             <div class="back">
                 <img src="assets/pizza.png"
                     alt="pizza"
-                    data-name="pizza"
                     class="food"></div>
         </div>
-        <div class="card">
+        <div class="card"
+            data-name="hanbao">
             <div class="front">
                 <img src="assets/card.png"
                     alt="card">
@@ -83,10 +84,10 @@
             <div class="back">
                 <img src="assets/hanbao.png"
                     alt="hanbao"
-                    data-name="hanbao"
                     class="food"></div>
         </div>
-        <div class="card">
+        <div class="card"
+            data-name="beef">
             <div class="front">
                 <img src="assets/card.png"
                     alt="card">
@@ -94,10 +95,10 @@
             <div class="back">
                 <img src="assets/beef.png"
                     alt="beef"
-                    data-name="beef"
                     class="food"></div>
         </div>
-        <div class="card">
+        <div class="card"
+            data-name="noodle">
             <div class="front">
                 <img src="assets/card.png"
                     alt="card">
@@ -105,27 +106,26 @@
             <div class="back">
                 <img src="assets/noddle.png"
                     alt="noodle"
-                    data-name="noodle"
                     class="food"></div>
         </div>
-        <div class="card">
+        <div class="card"
+            data-name="rice">
             <div class="front">
                 <img src="assets/card.png"
                     alt="card"></div>
             <div class="back">
                 <img src="assets/rice.png"
                     alt="rice"
-                    data-name="rice"
                     class="food"></div>
         </div>
-        <div class="card">
+        <div class="card"
+            data-name="hotdog">
             <div class="front">
                 <img src="assets/card.png"
                     alt="card">
             </div>
             <div class="back">
                 <img src="assets/hotdog.png"
-                    data-name="hotdog"
                     alt="hotdog"
                     class="food">
             </div>
