--- a/index.html
+++ b/index.html
@@ -11,15 +11,44 @@
         rel="stylesheet">
     <link rel="stylesheet"
         href="styles.css">
-    <title>My Merory</title>
+    <title>About food</title>
 </head>
 
 <body>
-    <button id="startbtn">cheat</button>
-    <div id='text'> result </div>
-    <div id="point">0</div>
+    <div id="intro">
+        <button id="startbtn">cheat</button>
+        <div id='text'> result </div>
+        <div id="point">0</div>
+
+        <div id="upload">
+            <!--   <button id="uploadBtn">upload</button>
+            <input type="file"
+                id="uploadinput"
+                accept=".jpg, .jpeg, .png"
+                name="files[]"
+                multiple /> -->
+
+            <input type="file"
+                id="files"
+                name="files[]"
+                multiple />
+            <output id="list"></output>
+        </div>
+    </div>
 
     <section id="container">
+        <div class="card"
+            data-name="green">
+            <div class="front">
+                <img src="assets/card.png"
+                    alt="card1">
+            </div>
+            <div class="back">
+                <img src="assets/green.png"
+                    alt="green"
+                    class="food">
+            </div>
+        </div>
         <div class="card"
             data-name="green">
             <div class="front">
@@ -65,6 +94,16 @@
                     class="food"></div>
         </div>
         <div class="card"
+            data-name="salad">
+            <div class="front">
+                <img src="assets/card.png"
+                    alt="card"></div>
+            <div class="back">
+                <img src="assets/salad.png"
+                    alt="salad"
+                    class="food"></div>
+        </div>
+        <div class="card"
             data-name="pizza">
             <div class="front">
                 <img src="assets/card.png"
@@ -73,6 +112,28 @@
             <div class="back">
                 <img src="assets/pizza.png"
                     alt="pizza"
+                    class="food"></div>
+        </div>
+        <div class="card"
+            data-name="pizza">
+            <div class="front">
+                <img src="assets/card.png"
+                    alt="card">
+            </div>
+            <div class="back">
+                <img src="assets/pizza.png"
+                    alt="pizza"
+                    class="food"></div>
+        </div>
+        <div class="card"
+            data-name="hanbao">
+            <div class="front">
+                <img src="assets/card.png"
+                    alt="card">
+            </div>
+            <div class="back">
+                <img src="assets/hanbao.png"
+                    alt="hanbao"
                     class="food"></div>
         </div>
         <div class="card"
@@ -98,6 +159,28 @@
                     class="food"></div>
         </div>
         <div class="card"
+            data-name="beef">
+            <div class="front">
+                <img src="assets/card.png"
+                    alt="card">
+            </div>
+            <div class="back">
+                <img src="assets/beef.png"
+                    alt="beef"
+                    class="food"></div>
+        </div>
+        <div class="card"
+            data-name="noodle">
+            <div class="front">
+                <img src="assets/card.png"
+                    alt="card">
+            </div>
+            <div class="back">
+                <img src="assets/noddle.png"
+                    alt="noodle"
+                    class="food"></div>
+        </div>
+        <div class="card"
             data-name="noodle">
             <div class="front">
                 <img src="assets/card.png"
@@ -117,6 +200,28 @@
                 <img src="assets/rice.png"
                     alt="rice"
                     class="food"></div>
+        </div>
+        <div class="card"
+            data-name="rice">
+            <div class="front">
+                <img src="assets/card.png"
+                    alt="card"></div>
+            <div class="back">
+                <img src="assets/rice.png"
+                    alt="rice"
+                    class="food"></div>
+        </div>
+        <div class="card"
+            data-name="hotdog">
+            <div class="front">
+                <img src="assets/card.png"
+                    alt="card">
+            </div>
+            <div class="back">
+                <img src="assets/hotdog.png"
+                    alt="hotdog"
+                    class="food">
+            </div>
         </div>
         <div class="card"
             data-name="hotdog">
